Fixed visual-card alignment

--- a/client/app/assets/less/redash/redash-newstyle.less
+++ b/client/app/assets/less/redash/redash-newstyle.less
@@ -237,6 +237,10 @@ body {
   float: right;
 }
 
+.visual-card-list {
+  margin: -5px 0 0 -5px; // compensate for .visual-card spacing
+}
+
 .visual-card {
   background: #FFFFFF;
   border: 1px solid fade(@redash-gray, 15%);
